# streaming-bench

./: LICENSE  streaming-bench.cabal
src/Streaming/: Bench.hs
