cabal-version: 2.2
name:
  streaming-bench
version:
  0.1
synopsis:
  benchmark streaming algorithms

-- A longer description of the package.
-- description:
homepage:
  https://github.com/chessai/streaming-bench

-- A URL where users can report bugs.
-- bug-reports:
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Streaming.Bench
  build-depends:
    , base >= 4.14 && < 4.18
    , streaming >= 0.2 && < 0.3
  hs-source-dirs:
    src
  default-language:
    Haskell2010
